# Waveshare-Cobra-Flex-ROS2-Autonomous-Car

./: .gitignore  README.md
assets/: README.md
assets/3d-models/: Cobra Flex Flex Plate.stl  Cobra Flex Full Plate.stl  Cobra Flex Full Plate_bot.stl  Cobra Flex Full Plate_top.stl  README.md  RPLIDAR A2M8 Base.stl  ZED Mini Base.stl
assets/photos/: README.md
docs/: README.md  media-log.md
ros2_ws/: README.md
ros2_ws/src/cobraflex/: README.md  mav1.urdf  package.xml  setup.cfg  setup.py
ros2_ws/src/cobraflex/cobraflex/: README.md  __init__.py  cobraflex_cmdvel_driver.py  cobraflex_node.py  cobraflex_ros_driver.py  lidar_avoidance_node.py  lidar_avoidance_pid_node.py
ros2_ws/src/cobraflex/config/: README.md  gazebo_bridge.yaml
ros2_ws/src/cobraflex/launch/: README.md  cobraflex.launch.xml  cobraflex_automatic.launch.xml  cobraflex_bringup.launch.py  cobraflex_bringup.launch.xml  cobraflex_description.launch.xml  cobraflex_driver.launch.xml  cobraflex_manual.launch.xml  cobraflex_sensors.launch.xml  cobraflex_zed_description.launch.py  mav1_gazebo.launch.xml  obraflex_bringup.launch.xml
ros2_ws/src/cobraflex/resource/: README.md  cobraflex
ros2_ws/src/cobraflex/rviz/: README.md  mav1_description.rviz
ros2_ws/src/cobraflex/test/: README.md  test_cobraflex.py
ros2_ws/src/cobraflex/urdf/: README.md  mav1.urdf  mav1.urdf.xacro  mav1_base.urdf.xacro  rplidar_a2.urdf.xacro  zed_m.urdf.xacro
scripts/: Pointcloud_Fusion.rviz  README.md  lidar_to_zed_pointcloud.py  lidar_to_zed_projection_debug.py  lidar_zed_distance_comparison.py  scripts.md
(+8 files in other folders)
