<?xml version="1.0"?>
<package format="3">

  <name>cobraflex</name>
  <version>0.1.0</version>
  <description>ROS2 driver and feedback interface for the CobraFlex chassis.</description>

  <maintainer email="sasamt02@hs-esslingen.de">samuel</maintainer>
  <license>Apache-2.0</license>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  
  <exec_depend>rplidar_ros</exec_depend>
  <exec_depend>zed_wrapper</exec_depend>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>


  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
